--- a/thankyou.html
+++ b/thankyou.html
@@ -468,6 +468,41 @@ div{
 			type: 'Conversion'
 		}, ['2a8e5ae2-7048-4cac-8e64-b7e9831a0a45']);
 	</script>
+
+	<!-- EBiS tag version4.10 start 20200212-->
+	<script type="text/javascript">
+		(function (a, d, e, b, i, s) {
+		window[i] = window[i] || []; var f = function (a, d, e, b, i, s) {
+			var o = a.getElementsByTagName(d)[0], h = a.createElement(d), t = 'text/javascript';
+			h.type = t; h.async = e; h.onload = function () {
+				window[i].init(
+					{ argument: s, auto: true }
+				);
+			}; h._p = o; return h;
+		}, h = f(a, d, e, b, i, s), l = '//taj', j = b + s + '/cmt.js'; h.src = l + '1.' + j;
+			h._p.parentNode.insertBefore(h, h._p); h.onerror = function (k) {
+				k = f(a, d, e, b, i, s);
+				k.src = l + '2.' + j; k._p.parentNode.insertBefore(k, k._p);
+			};
+		})(document, 'script', true, 'ebis.ne.jp/', 'ebis', 'wWhxyHBw');
+	</script>
+	<!-- EBiS tag end -->
+
+	<!-- EBiS customize area start 20200212-->
+	<script type="text/javascript">
+		window.ebis = window.ebis || [];
+		ebis.push({
+			argument: 'wWhxyHBw',
+			member_name: '',
+			amount: '',
+			other1: '',
+			other2: '',
+			other3: '',
+			other4: '',
+			other5: '',
+		});
+	</script>
+	<!-- EBiS customize area end -->
 </head>
 
 <body onload="init();" style="margin:0px;">
