20200515_ add tag 20.05.15 ASP

--- a/thankyou.html
+++ b/thankyou.html
@@ -649,7 +649,12 @@ div{
             type: 'Conversion'
         }, ['3c0118a2-1831-4d28-b2be-11d8375b555d']);
     </script>
-
+    
+    <!-- 20.05.15 ASP -->
+    <script>
+        (function (w, d, o, u, r, a, m) { w['affiliateocean'] = r; w[r] = w[r] || function () { (w[r].q = w[r].q || []).push(arguments) }, w[r].l = 1 * new Date(); a = d.createElement(o), m = d.getElementsByTagName(o)[0]; a.async = 1; a.src = u; m.parentNode.insertBefore(a, m); })(window, document, 'script', 'https://affiliate-ocean.jp/cv.min.js', 'ao');
+        var ao_cv_params = { 'domain': location.hostname, 'cc': 'w0000372205', 'cv_url': 'https://affiliate-ocean.jp/cv/i/w0000372205/cv', 'oid': getJsonFromUrl().order_id, 'amt': getJsonFromUrl().payment_total }; ao('g', ao_cv_params);
+    </script>
 </head>
 
 <body onload="init();" style="margin:0px;">
