20200603_add re20200603 tag

--- a/thankyou.html
+++ b/thankyou.html
@@ -701,6 +701,24 @@ div{
     </script>
     <!-- End CV tag -->
 
+    <!-- re20200603 -->
+    <script type="text/javascript">
+        window.rtAsyncInit = function() {
+            return {
+                sid : 26,
+                pid : 29,
+                price : 0,
+                reward : -1,
+                cname : '',
+                ctel : '',
+                cemail : '',
+                cinfo : getJsonFromUrl().order_id,
+            };
+        }
+        </script>
+        <script async defer id="rt_script" src="https://track.rentracksw.com/js/rt.sdk.js" type="text/javascript"></script>
+
+
     <div class="container">
         <div class="pageTitle"><img src="images/title.png" width="320" height="92" title="購物完成" /></div>
         <div class="subtitle">
