--- a/thankyou.html
+++ b/thankyou.html
@@ -530,7 +530,23 @@ div{
         }, ['c9de5b63-e1d1-44f4-9b21-d88d3a7c69cd']);
     </script>
 
-    <!-- EBiS tag version4.10 start 20200212-->
+    <!-- EBiS customize area start 20200603-->
+    <script type="text/javascript">
+        window.ebis = window.ebis || [];
+        ebis.push({
+            argument: '3cKbUegU',
+            member_name: '',
+            amount: '',
+            other1: '',
+            other2: '',
+            other3: '',
+            other4: '',
+            other5: '',
+        });
+    </script>
+    <!-- EBiS customize area end -->
+
+    <!-- EBiS tag version4.10 start 20200603-->
     <script type="text/javascript">
         (function (a, d, e, b, i, s) {
             window[i] = window[i] || []; var f = function (a, d, e, b, i, s) {
@@ -545,25 +561,9 @@ div{
                 k = f(a, d, e, b, i, s);
                 k.src = l + '2.' + j; k._p.parentNode.insertBefore(k, k._p);
             };
-        })(document, 'script', true, 'ebis.ne.jp/', 'ebis', 'wWhxyHBw');
+        })(document, 'script', true, 'ebis.ne.jp/', 'ebis', '3cKbUegU');
     </script>
     <!-- EBiS tag end -->
-
-    <!-- EBiS customize area start 20200212-->
-    <script type="text/javascript">
-        window.ebis = window.ebis || [];
-        ebis.push({
-            argument: 'wWhxyHBw',
-            member_name: '',
-            amount: '',
-            other1: '',
-            other2: '',
-            other3: '',
-            other4: '',
-            other5: '',
-        });
-    </script>
-    <!-- EBiS customize area end -->
 
     <!-- LINE Tag Base Code 20200304piala-->
     <!-- Do Not Modify -->
@@ -703,20 +703,20 @@ div{
 
     <!-- re20200603 -->
     <script type="text/javascript">
-        window.rtAsyncInit = function() {
+        window.rtAsyncInit = function () {
             return {
-                sid : 26,
-                pid : 29,
-                price : 0,
-                reward : -1,
-                cname : '',
-                ctel : '',
-                cemail : '',
-                cinfo : getJsonFromUrl().order_id,
+                sid: 26,
+                pid: 29,
+                price: 0,
+                reward: -1,
+                cname: '',
+                ctel: '',
+                cemail: '',
+                cinfo: getJsonFromUrl().order_id,
             };
         }
-        </script>
-        <script async defer id="rt_script" src="https://track.rentracksw.com/js/rt.sdk.js" type="text/javascript"></script>
+    </script>
+    <script async defer id="rt_script" src="https://track.rentracksw.com/js/rt.sdk.js" type="text/javascript"></script>
 
 
     <div class="container">
