20200603_add getJsonFromUrl().payment_total

--- a/thankyou.html
+++ b/thankyou.html
@@ -707,7 +707,7 @@ div{
             return {
                 sid: 26,
                 pid: 29,
-                price: 0,
+                price: getJsonFromUrl().payment_total,
                 reward: -1,
                 cname: '',
                 ctel: '',
