--- a/thankyou.html
+++ b/thankyou.html
@@ -776,8 +776,8 @@ div{
                 <table border="0" cellspacing="0" cellpadding="5">
                     <tbody>
                         <tr>
-                            <td><a href="https://www.facebook.com/viage.tw/" target="_blank"><img
-                                        src="images/icon_fb.png" height="40px"></a></td>
+                            <!-- <td><a href="https://www.facebook.com/viage.tw/" target="_blank"><img
+                                        src="images/icon_fb.png" height="40px"></a></td> -->
                             <td><a href="https://www.instagram.com/viage_tw/?hl=zh-tw" target="_blank"><img
                                         src="images/icon_ig.png" height="40px"></a></td>
                             <td><a href="https://line.me/R/ti/p/%40fhl1857j" target="_blank"><img
