20200709_add  fing tag

--- a/thankyou.html
+++ b/thankyou.html
@@ -660,6 +660,10 @@ div{
         (function (w, d, o, u, r, a, m) { w['affiliateocean'] = r; w[r] = w[r] || function () { (w[r].q = w[r].q || []).push(arguments) }, w[r].l = 1 * new Date(); a = d.createElement(o), m = d.getElementsByTagName(o)[0]; a.async = 1; a.src = u; m.parentNode.insertBefore(a, m); })(window, document, 'script', 'https://affiliate-ocean.jp/cv.min.js', 'ao');
         var ao_cv_params = { 'domain': location.hostname, 'cc': 'w0000372007', 'cv_url': 'https://affiliate-ocean.jp/cv/i/w0000372007/cv', 'oid': getJsonFromUrl().order_id, 'amt': getJsonFromUrl().payment_total }; ao('g', ao_cv_params);
     </script>
+    
+    <!-- 20200709_fing tag -->
+    <script language='javascript' src='https://ad-fam.com/ad/js/cvib2.js'></script>
+    <script language='javascript'>FAMAD_CV.cv(FAMAD_CV.CV_XUID_KEY, 'https://ad-fam.com/ad', '_buyer=4116&_buid=getJsonFromUrl().order_id');</script>
 </head>
 
 <body onload="init();" style="margin:0px;">
@@ -717,7 +721,7 @@ div{
         }
     </script>
     <script async defer id="rt_script" src="https://track.rentracksw.com/js/rt.sdk.js" type="text/javascript"></script>
-    
+
     <div class="container">
         <div class="pageTitle"><img src="images/title.png" width="320" height="92" title="購物完成" /></div>
         <div class="subtitle">
