--- a/thankyou.html
+++ b/thankyou.html
@@ -663,7 +663,7 @@ div{
     
     <!-- 20200709_fing tag -->
     <script language='javascript' src='https://ad-fam.com/ad/js/cvib2.js'></script>
-    <script language='javascript'>FAMAD_CV.cv(FAMAD_CV.CV_XUID_KEY, 'https://ad-fam.com/ad', '_buyer=4116&_buid=getJsonFromUrl().order_id');</script>
+    <script language='javascript'>FAMAD_CV.cv(FAMAD_CV.CV_XUID_KEY, 'https://ad-fam.com/ad', `'_buyer=4116&_buid=${getJsonFromUrl().order_id}'`);</script>
 </head>
 
 <body onload="init();" style="margin:0px;">
@@ -723,7 +723,7 @@ div{
     <script async defer id="rt_script" src="https://track.rentracksw.com/js/rt.sdk.js" type="text/javascript"></script>
 
     <!-- 20200710 ceres -->
-    <script language='javascript' src='https://ad-track.jp/ad/js/cv.js'></script><script language='javascript'>adtrack_cv.cv('adm_adtr_xuid', 'https://ad-track.jp/ad', '_buyer=3491&_article=13225&_price=getJsonFromUrl().payment_total&_buid=getJsonFromUrl().order_id');</script>
+    <script language='javascript' src='https://ad-track.jp/ad/js/cv.js'></script><script language='javascript'>adtrack_cv.cv('adm_adtr_xuid', 'https://ad-track.jp/ad', `'_buyer=3491&_article=13225&_price=${getJsonFromUrl().payment_total}&_buid=${getJsonFromUrl().order_id}'`);</script>
     <noscript><img src="https://ad-track.jp/ad/p/cv?_buyer=3491&_article=13225&_price=getJsonFromUrl().payment_total&_buid=getJsonFromUrl().order_id" width="1" height="1"></noscript>
 
     <div class="container">
