--- a/thankyou.html
+++ b/thankyou.html
@@ -15,6 +15,7 @@
     <meta http-equiv="Content-Style-Type" content="text/css" />
     <meta name="authoring-tool" content="Adobe_Animate_CC">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <script src="/CommonFiles/js/jquery-3.3.1.min.js"></script>
     <script src="/CommonFiles/js/jquery.cookie-1.4.1.min.js"></script>
     <script src="/CommonFiles/thankyou/main.js?ver=20200407"></script>
@@ -24,8 +25,8 @@
     </script>
     <!-- write your code here -->
     <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-    <script src="gift_bra.js?1553852348708"></script>
-    <script>
+    <!-- <script src="gift_bra.js?1553852348708"></script> -->
+    <!-- <script>
         var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
         function init() {
             canvas = document.getElementById("canvas");
@@ -101,7 +102,7 @@
             AdobeAn.compositionLoaded(lib.properties.id);
             fnStartAnimation();
         }
-    </script>
+    </script> -->
     <!-- write your code here -->
 
     <style type="text/css">
@@ -420,50 +421,6 @@ div{
         }, ['b8a00e7f-ba6a-4a78-8de5-8e1668b95b40']);
     </script>
 
-    <!-- 冠瑜 test 20200304-->
-    <!-- <div id="linebasecode"></div> -->
-    <!-- <script>
-        var preUrl = document.referrer;
-        var n = preUrl.includes("utm_source=ten");
-
-        if (n) {
-            console.log("網址裡面有含 utm_source=ten ");
-            // LINE Tag Base Code 20200205ten 
-            // Do Not Modify 
-            (function (g, d, o) {
-                g._ltq = g._ltq || []; g._lt = g._lt || function () { g._ltq.push(arguments) };
-                var h = location.protocol === 'https:' ? 'https://d.line-scdn.net' : 'http://d.line-cdn.net';
-                var s = d.createElement('script'); s.async = 1;
-                s.src = o || h + '/n/line_tag/public/release/v1/lt.js';
-                var t = d.getElementsByTagName('script')[0]; t.parentNode.insertBefore(s, t);
-            })(window, document);
-            _lt('init', {
-                customerType: 'lap',
-                tagId: '2a8e5ae2-7048-4cac-8e64-b7e9831a0a45'
-            });
-            _lt('send', 'pv', ['2a8e5ae2-7048-4cac-8e64-b7e9831a0a45']);
-
-            // End LINE Tag Base Code
-            _lt('send', 'cv', {
-                type: 'Conversion'
-            }, ['2a8e5ae2-7048-4cac-8e64-b7e9831a0a45']);
-
-            // POPIN
-            window._pop = window._pop || [];
-            window._pop.push(["_set_conversion_id", "viage_tw"]);
-            window._pop.push(["_set_action", "cv"]);
-            (function () {
-                var el = document.createElement("script"); el.type = "text/javascript"; el.async = true;
-                el.src = (("https:" == document.location.protocol) ? "https://" : "http://") + "api.popin.cc/conversion2.js";
-                var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(el, s);
-            })();
-        }
-    </script> -->
-    <!-- <noscript>
-        <img height="1" width="1" style="display:none"
-            src="https://tr.line.me/tag.gif?c_t=lap&t_id=2a8e5ae2-7048-4cac-8e64-b7e9831a0a45&e=pv&noscript=1" />
-    </noscript> -->
-
     <!-- LINE Tag Base Code 20200205ten-->
     <!-- Do Not Modify -->
     <script>
@@ -567,37 +524,6 @@ div{
 
     <!-- LINE Tag Base Code 20200304piala-->
     <!-- Do Not Modify -->
-    <!-- <script>
-        var preUrl_piala = document.referrer;
-        var p = preUrl_piala.includes("utm_source=piala");
-        if (p) {
-            console.log("來源網頁網址有utm_source=piala");
-            (function (g, d, o) {
-                g._ltq = g._ltq || []; g._lt = g._lt || function () { g._ltq.push(arguments) };
-                var h = location.protocol === 'https:' ? 'https://d.line-scdn.net' : 'http://d.line-cdn.net';
-                var s = d.createElement('script'); s.async = 1;
-                s.src = o || h + '/n/line_tag/public/release/v1/lt.js';
-                var t = d.getElementsByTagName('script')[0]; t.parentNode.insertBefore(s, t);
-            })(window, document);
-            _lt('init', {
-                customerType: 'lap',
-                tagId: '508ae9b5-cff8-4136-927b-2f61ea0e850b'
-            });
-            _lt('send', 'pv', ['508ae9b5-cff8-4136-927b-2f61ea0e850b']);
-
-            // End LINE Tag Base Code
-            _lt('send', 'cv', {
-                type: 'Conversion'
-            }, ['508ae9b5-cff8-4136-927b-2f61ea0e850b']);
-        }
-    </script>
-    <noscript>
-        <img height="1" width="1" style="display:none"
-            src="https://tr.line.me/tag.gif?c_t=lap&t_id=508ae9b5-cff8-4136-927b-2f61ea0e850b&e=pv&noscript=1" />
-    </noscript> -->
-
-    <!-- LINE Tag Base Code 20200304piala-->
-    <!-- Do Not Modify -->
     <script>
         (function (g, d, o) {
             g._ltq = g._ltq || []; g._lt = g._lt || function () { g._ltq.push(arguments) };
@@ -660,10 +586,11 @@ div{
         (function (w, d, o, u, r, a, m) { w['affiliateocean'] = r; w[r] = w[r] || function () { (w[r].q = w[r].q || []).push(arguments) }, w[r].l = 1 * new Date(); a = d.createElement(o), m = d.getElementsByTagName(o)[0]; a.async = 1; a.src = u; m.parentNode.insertBefore(a, m); })(window, document, 'script', 'https://affiliate-ocean.jp/cv.min.js', 'ao');
         var ao_cv_params = { 'domain': location.hostname, 'cc': 'w0000372007', 'cv_url': 'https://affiliate-ocean.jp/cv/i/w0000372007/cv', 'oid': getJsonFromUrl().order_id, 'amt': getJsonFromUrl().payment_total }; ao('g', ao_cv_params);
     </script>
-    
+
     <!-- 20200709_fing tag -->
     <script language='javascript' src='https://ad-fam.com/ad/js/cvib2.js'></script>
-    <script language='javascript'>FAMAD_CV.cv(FAMAD_CV.CV_XUID_KEY, 'https://ad-fam.com/ad', `_buyer=4116&_buid=${getJsonFromUrl().order_id}`);</script>
+    <script
+        language='javascript'>FAMAD_CV.cv(FAMAD_CV.CV_XUID_KEY, 'https://ad-fam.com/ad', `_buyer=4116&_buid=${getJsonFromUrl().order_id}`);</script>
 </head>
 
 <body onload="init();" style="margin:0px;">
@@ -723,34 +650,59 @@ div{
     <script async defer id="rt_script" src="https://track.rentracksw.com/js/rt.sdk.js" type="text/javascript"></script>
 
     <!-- 20200710 ceres -->
-    <script language='javascript' src='https://ad-track.jp/ad/js/cv.js'></script><script language='javascript'>adtrack_cv.cv('adm_adtr_xuid', 'https://ad-track.jp/ad', `_buyer=3491&_article=13225&_price=${getJsonFromUrl().payment_total}&_buid=${getJsonFromUrl().order_id}`);</script>
-    <noscript><img src="https://ad-track.jp/ad/p/cv?_buyer=3491&_article=13225&_price=getJsonFromUrl().payment_total&_buid=getJsonFromUrl().order_id" width="1" height="1"></noscript>
+    <script language='javascript' src='https://ad-track.jp/ad/js/cv.js'></script>
+    <script
+        language='javascript'>adtrack_cv.cv('adm_adtr_xuid', 'https://ad-track.jp/ad', `_buyer=3491&_article=13225&_price=${getJsonFromUrl().payment_total}&_buid=${getJsonFromUrl().order_id}`);</script>
+    <noscript><img
+            src="https://ad-track.jp/ad/p/cv?_buyer=3491&_article=13225&_price=getJsonFromUrl().payment_total&_buid=getJsonFromUrl().order_id"
+            width="1" height="1"></noscript>
 
     <div class="container">
         <div class="pageTitle"><img src="images/title.png" width="320" height="92" title="購物完成" /></div>
         <div class="subtitle">
-            <p class="tx1" style="line-height:32px;
-	margin-bottom:10px;font-family: 'Noto Serif TC', serif;"><span
-                    class="blue">非常感謝您的購買！<br>我們會盡快安排出貨給您，<br>並期待您下次的光臨！</span></p>
+            <p class="tx1" style="line-height:32px; margin-bottom:10px;font-family: 'Noto Serif TC', serif;">
+                <span class="blue">非常感謝您的購買！<br>我們會盡快安排出貨給您，<br>並期待您下次的光臨！</span>
+            </p>
         </div>
         <div class="order">
             <a href="https://forms.gle/Hr9gJtAmMWxaYivB8" target="blank"><img src="images/icon.gif" title=""></a>
         </div>
-        <div id="animation_container" style="background-color:rgba(255, 255, 255, 1.00);text-align:center;">
+        <!-- <div id="animation_container" style="background-color:rgba(255, 255, 255, 1.00);text-align:center;">
             <canvas id="canvas" width="560" height="550"
-                style="position: absolute; display: block; background-color:rgba(255, 255, 255, 1.00);"></canvas>
+                style="position: absolute; display: block; background-color:rgba(255, 255, 255, 1.00);">
+            </canvas>
             <div id="dom_overlay_container"
                 style="pointer-events:none; overflow:hidden; width:560px; height:550px; position: absolute; left: 0px; top: 0px; display: block;">
             </div>
+        </div> -->
+        <div class="qrcode" style="position: relative;">
+            <p class="animate__animated animate__flash animate__infinite"
+                style="font-size:25px;line-height:36px; position: absolute;top: 7%;left: 7%;">VIAGE官方 <span
+                    style="color:#4CB233;font-weight: bold;">LINE@</span></p>
+            <p class="animate__animated animate__flash animate__infinite"
+                style="font-size:25px;line-height:36px;letter-spacing:4px;color:#859f84;font-weight: bold; position: absolute;top: 16%;left: 11%;">
+                立即掃描加入</p>
+            <img src="images/QR code.jpg" alt="">
+            <p style="font-size:25px;line-height:36px;letter-spacing:4px; position: absolute;right: 11%;bottom: 28%;">
+                ID: @fhl1857j</p>
+            <p class="animate__animated animate__heartBeat animate__infinite"
+                style="font-size:24px;line-height:36px;color:#895c91;font-family: 'Noto Serif TC', serif;font-weight: bold;">
+                享最即時的<span style="color:#cf76a2">專屬優惠</span>及<br>最貼心的美胸保養資訊</p>
         </div>
-
         <div class="contents">
-            <p class="tx3" style="padding-top: 30px;">
-                我們已經以電子郵件的方式寄出了您本次的訂購明細，還請您確認一下。<br>
-                商品將於您下單後的隔天～3個工作天內送至您手上。<br>
-                到貨當日，請務必確認有人可以收貨。<br>
-
-            </p>
+            <div class="row" style="display:flex;flex-direction: row">
+                <div class="col-8" style="flex:2">
+                    <p class="tx3" style="padding: 30px 0 0 5%;">
+                        我們已經以電子郵件的方式寄出了您本次的訂購明細，還請您確認一下。<br>
+                        商品將於您下單後的隔天～3個工作天內送至您手上。<br>
+                        到貨當日，請務必確認有人可以收貨。<br>
+                    </p>
+                </div>
+                <div class="col-4" style="flex:1">
+                    <a href="https://forms.gle/Hr9gJtAmMWxaYivB8" target="blank"><img src="images/icon.gif" title=""
+                            style="padding-top: 25%; width: 85%;"></a>
+                </div>
+            </div>
             <div class="inform">
                 <ul>
                     <li>本商品屬個人衛生用品，係屬消保法第十九條第一項所稱合理例外情事，個人衛生用品不適用於七天猶豫期之規定，恕無法受理因個人因素之退換貨，敬請見諒。</li>
