--- a/thankyou.html
+++ b/thankyou.html
@@ -183,6 +183,20 @@ div{
             font-size: 16px;
         }
 
+        .SP {
+            display: none;
+        }
+
+        @media screen and (max-width: 768px) {
+            .PC {
+                display: none;
+            }
+
+            .SP {
+                display: block;
+            }
+        }
+
         a:link,
         a:visited {
             color: #2747C9;
@@ -247,6 +261,18 @@ div{
             text-align: left;
             padding: 0 5%;
             color: #464646;
+        }
+
+        .tx4 {
+            text-align: left;
+            padding: 30px 0 0 5%;
+            color: #464646;
+        }
+
+        @media screen and (max-width: 768px) {
+            .tx4 {
+                padding: 5%;
+            }
         }
 
         .red {
@@ -664,9 +690,9 @@ div{
                 <span class="blue">非常感謝您的購買！<br>我們會盡快安排出貨給您，<br>並期待您下次的光臨！</span>
             </p>
         </div>
-        <div class="order">
+        <!-- <div class="order">
             <a href="https://forms.gle/Hr9gJtAmMWxaYivB8" target="blank"><img src="images/icon.gif" title=""></a>
-        </div>
+        </div> -->
         <!-- <div id="animation_container" style="background-color:rgba(255, 255, 255, 1.00);text-align:center;">
             <canvas id="canvas" width="560" height="550"
                 style="position: absolute; display: block; background-color:rgba(255, 255, 255, 1.00);">
@@ -675,7 +701,7 @@ div{
                 style="pointer-events:none; overflow:hidden; width:560px; height:550px; position: absolute; left: 0px; top: 0px; display: block;">
             </div>
         </div> -->
-        <div class="qrcode" style="position: relative;">
+        <div class="qrcode PC" style="position: relative;">
             <p class="animate__animated animate__flash animate__infinite"
                 style="font-size:25px;line-height:36px; position: absolute;top: 7%;left: 7%;">VIAGE官方 <span
                     style="color:#4CB233;font-weight: bold;">LINE@</span></p>
@@ -689,19 +715,31 @@ div{
                 style="font-size:24px;line-height:36px;color:#895c91;font-family: 'Noto Serif TC', serif;font-weight: bold;">
                 享最即時的<span style="color:#cf76a2">專屬優惠</span>及<br>最貼心的美胸保養資訊</p>
         </div>
+        <div class="join_btn SP">
+            <p style="font-size:32px;line-height:36px;margin:4% 0;">VIAGE官方 <span
+                    style="color:#4CB233;font-weight: bold;">LINE@</span></p>
+            <a href="https://bit.ly/3fwkQmj" target="blank"><img src="images/join_btn.jpg" title=""
+                    style="width: 60%;" class="animate__animated animate__flash animate__infinite"></a>
+            <p class="animate__animated animate__heartBeat animate__infinite"
+                style="font-size:24px;line-height:36px;color:#895c91;font-family: 'Noto Serif TC', serif;font-weight: bold;">
+                享最即時的<span style="color:#cf76a2">專屬優惠</span>及<br>最貼心的美胸保養資訊</p>
+        </div>
         <div class="contents">
             <div class="row" style="display:flex;flex-direction: row">
                 <div class="col-8" style="flex:2">
-                    <p class="tx3" style="padding: 30px 0 0 5%;">
+                    <p class="tx4">
                         我們已經以電子郵件的方式寄出了您本次的訂購明細，還請您確認一下。<br>
                         商品將於您下單後的隔天～3個工作天內送至您手上。<br>
                         到貨當日，請務必確認有人可以收貨。<br>
                     </p>
                 </div>
-                <div class="col-4" style="flex:1">
+                <div class="col-4 PC" style="flex:1">
                     <a href="https://forms.gle/Hr9gJtAmMWxaYivB8" target="blank"><img src="images/icon.gif" title=""
-                            style="padding-top: 25%; width: 85%;"></a>
+                            style="width: 85%;"></a>
                 </div>
+            </div>
+            <div class="SP">
+                <a href="https://forms.gle/Hr9gJtAmMWxaYivB8" target="blank"><img src="images/icon.gif" title=""></a>
             </div>
             <div class="inform">
                 <ul>
