20200715_btn padding-top

--- a/thankyou.html
+++ b/thankyou.html
@@ -735,7 +735,7 @@ div{
                 </div>
                 <div class="col-4 PC" style="flex:1">
                     <a href="https://forms.gle/Hr9gJtAmMWxaYivB8" target="blank"><img src="images/icon.gif" title=""
-                            style="width: 85%;"></a>
+                            style="width: 85%;padding-top: 25%;"></a>
                 </div>
             </div>
             <div class="SP">
