--- a/thankyou.html
+++ b/thankyou.html
@@ -711,7 +711,7 @@ div{
             <img src="images/QR code.jpg" alt="">
             <p style="font-size:25px;line-height:36px;letter-spacing:4px; position: absolute;right: 11%;bottom: 28%;">
                 ID: @fhl1857j</p>
-            <p class="animate__animated animate__heartBeat animate__infinite"
+            <p class="animate__animated animate__heartBeat animate__infinite "
                 style="font-size:24px;line-height:36px;color:#895c91;font-family: 'Noto Serif TC', serif;font-weight: bold;">
                 享最即時的<span style="color:#cf76a2">專屬優惠</span>及<br>最貼心的美胸保養資訊</p>
         </div>
@@ -719,8 +719,8 @@ div{
             <p style="font-size:32px;line-height:36px;margin:4% 0;">VIAGE官方 <span
                     style="color:#4CB233;font-weight: bold;">LINE@</span></p>
             <a href="https://bit.ly/3fwkQmj" target="blank"><img src="images/join_btn.jpg" title=""
-                    style="width: 60%;" class="animate__animated animate__flash animate__infinite"></a>
-            <p class="animate__animated animate__heartBeat animate__infinite"
+                    style="width: 60%;" class="animate__animated animate__heartBeat animate__infinite "></a>
+            <p class="animate__animated animate__flash animate__infinite"
                 style="font-size:24px;line-height:36px;color:#895c91;font-family: 'Noto Serif TC', serif;font-weight: bold;">
                 享最即時的<span style="color:#cf76a2">專屬優惠</span>及<br>最貼心的美胸保養資訊</p>
         </div>
