20200729_change QR code

--- a/thankyounext.html
+++ b/thankyounext.html
@@ -714,7 +714,7 @@ div{
             <p class="animate__animated animate__flash animate__infinite"
                 style="font-size:25px;line-height:36px;letter-spacing:4px;color:#859f84;font-weight: bold; position: absolute;top: 16%;left: 11%;">
                 立即掃描加入</p>
-            <img src="images/QR code.jpg" alt="">
+            <img src="images/QR code_next.jpg" alt="">
             <p style="font-size:25px;line-height:36px;letter-spacing:4px; position: absolute;right: 11%;bottom: 28%;">
                 ID: @fhl1857j</p>
             <p class="animate__animated animate__heartBeat animate__infinite "
@@ -724,7 +724,7 @@ div{
         <div class="join_btn SP">
             <p style="font-size:32px;line-height:36px;margin:4% 0;">VIAGE官方 <span
                     style="color:#4CB233;font-weight: bold;">LINE@</span></p>
-            <a href="https://bit.ly/3fwkQmj" target="blank"><img src="images/join_btn.jpg" title="" style="width: 60%;"
+            <a href="https://bit.ly/3063BCV" target="blank"><img src="images/join_btn.jpg" title="" style="width: 60%;"
                     class="animate__animated animate__heartBeat animate__infinite "></a>
             <p class="animate__animated animate__flash animate__infinite"
                 style="font-size:24px;line-height:36px;color:#895c91;font-family: 'Noto Serif TC', serif;font-weight: bold;">
