--- a/thankyou.html
+++ b/thankyou.html
@@ -718,7 +718,7 @@ div{
         <div class="join_btn SP">
             <p style="font-size:32px;line-height:36px;margin:4% 0;">VIAGE官方 <span
                     style="color:#4CB233;font-weight: bold;">LINE@</span></p>
-            <a href="https://bit.ly/3fwkQmj" target="blank"><img src="images/join_btn.jpg" title=""
+            <a href="https://bit.ly/2CX2jl0" target="blank"><img src="images/join_btn.jpg" title=""
                     style="width: 60%;" class="animate__animated animate__heartBeat animate__infinite "></a>
             <p class="animate__animated animate__flash animate__infinite"
                 style="font-size:24px;line-height:36px;color:#895c91;font-family: 'Noto Serif TC', serif;font-weight: bold;">
