--- a/thankyounext.html
+++ b/thankyounext.html
@@ -672,9 +672,9 @@ div{
 
     <!-- 20200708 聯盟網 -->
     <script type="text/javascript">
-        if (getJsonFromUrl().lp_param_ga1 == 'affiliates') {
-            console.log("lp_param_ga1 == 'affiliates'")
-            (function () {
+        (function () {
+            if (getJsonFromUrl().lp_param_ga1 == 'affiliates') {
+                console.log("lp_param_ga1 == 'affiliates'")
                 var VARemoteLoadOptions = {
                     whiteLabel: { id: 8, siteId: 1866, domain: 'vbtrax.com' },
                     conversion: true,
@@ -686,13 +686,14 @@ div{
                     },
                     locale: "en-US", mkt: true
                 };
+                console.log(VARemoteLoadOptions);
                 (function (c, o, n, v, e, r, l, y) {
                     c['VARemoteLoadOptions'] = e; r = o.createElement(n), l = o.getElementsByTagName(n)[0];
                     r.async = 1; r.src = v; l.parentNode.insertBefore(r, l);
-                    console.log("進入聯盟網");
                 })(window, document, 'script', 'https://cdn.vbtrax.com/javascripts/va.js', VARemoteLoadOptions);
-            })();
-        }
+            }
+        })();
+
     </script>
 
     <div class="container">
