--- a/thankyounext.html
+++ b/thankyounext.html
@@ -672,6 +672,25 @@ div{
 
     <!-- 20200708 聯盟網 -->
     <script type="text/javascript">
+            (function () {
+                var VARemoteLoadOptions = {
+                    whiteLabel: { id: 8, siteId: 1866, domain: 'vbtrax.com' },
+                    conversion: true,
+                    conversionData: {
+                        step: 'sale', // conversion name
+                        // revenue: '置入CPA 金額/分潤金額', // revenue share
+                        orderTotal: getJsonFromUrl().payment_total, // order total
+                        order: getJsonFromUrl().order_id, // order number
+                    },
+                    locale: "en-US", mkt: true
+                };
+                (function (c, o, n, v, e, r, l, y) {
+                    c['VARemoteLoadOptions'] = e; r = o.createElement(n), l = o.getElementsByTagName(n)[0];
+                    r.async = 1; r.src = v; l.parentNode.insertBefore(r, l);
+                })(window, document, 'script', 'https://cdn.vbtrax.com/javascripts/va.js', VARemoteLoadOptions);
+            })();
+    </script>
+    <!-- <script type="text/javascript">
         (function () {
             if (getJsonFromUrl().lp_param_ga1 == 'affiliates') {
                 console.log("lp_param_ga1 == 'affiliates'")
@@ -694,7 +713,7 @@ div{
             }
         })();
 
-    </script>
+    </script> -->
 
     <div class="container">
         <div class="pageTitle"><img src="images/title.png" width="320" height="92" title="購物完成" /></div>
