--- a/thankyou.html
+++ b/thankyou.html
@@ -24,7 +24,7 @@
         redirectOrderInfo();
     </script>
     <!-- write your code here -->
-    <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
+    <!-- <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script> -->
     <!-- <script src="gift_bra.js?1553852348708"></script> -->
     <!-- <script>
         var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
