--- a/thankyou.html
+++ b/thankyou.html
@@ -677,11 +677,8 @@ div{
 
     <!-- 20200710 ceres -->
     <script language='javascript' src='https://ad-track.jp/ad/js/cv.js'></script>
-    <script
-        language='javascript'>adtrack_cv.cv('adm_adtr_xuid', 'https://ad-track.jp/ad', `_buyer=3491&_article=13225&_price=${getJsonFromUrl().payment_total}&_buid=${getJsonFromUrl().order_id}`);</script>
-    <noscript><img
-            src="https://ad-track.jp/ad/p/cv?_buyer=3491&_article=13225&_price=getJsonFromUrl().payment_total&_buid=getJsonFromUrl().order_id"
-            width="1" height="1"></noscript>
+    <script language='javascript'>adtrack_cv.cv('adm_adtr_xuid', 'https://ad-track.jp/ad', `_buyer=3491&_article=13225&_price=${getJsonFromUrl().payment_total}&_buid=${getJsonFromUrl().order_id}`);</script>
+    <noscript><img src="https://ad-track.jp/ad/p/cv?_buyer=3491&_article=13225&_price=getJsonFromUrl().payment_total&_buid=getJsonFromUrl().order_id" width="1" height="1"></noscript>
 
     <div class="container">
         <div class="pageTitle"><img src="images/title.png" width="320" height="92" title="購物完成" /></div>
