20200812_fing tag update_2

--- a/thankyou.html
+++ b/thankyou.html
@@ -615,8 +615,7 @@ div{
 
     <!-- 20200709_fing tag -->
     <script language='javascript' src='https://ad-fam.com/ad/js/cvib2.js'></script>
-    <script
-        language='javascript'>FAMAD_CV.cv(FAMAD_CV.CV_XUID_KEY, 'https://ad-fam.com/ad', `_buyer=4116&_buid=${getJsonFromUrl().order_id}`);</script>
+    <script language='javascript'>FAMAD_CV.cv(FAMAD_CV.CV_XUID_KEY, 'https://ad-fam.com/ad', `_buyer=4116&_buid=${getJsonFromUrl().order_id}`);</script>
 </head>
 
 <body onload="init();" style="margin:0px;">
