20200819 add afb tag

--- a/thankyou.html
+++ b/thankyou.html
@@ -615,7 +615,8 @@ div{
 
     <!-- 20200709_fing tag -->
     <script language='javascript' src='https://ad-fam.com/ad/js/cvib2.js'></script>
-    <script language='javascript'>FAMAD_CV.cv(FAMAD_CV.CV_XUID_KEY, 'https://ad-fam.com/ad', `_buyer=4116&_buid=${getJsonFromUrl().order_id}`);</script>
+    <script
+        language='javascript'>FAMAD_CV.cv(FAMAD_CV.CV_XUID_KEY, 'https://ad-fam.com/ad', `_buyer=4116&_buid=${getJsonFromUrl().order_id}`);</script>
 </head>
 
 <body onload="init();" style="margin:0px;">
@@ -676,8 +677,26 @@ div{
 
     <!-- 20200710 ceres -->
     <script language='javascript' src='https://ad-track.jp/ad/js/cv.js'></script>
-    <script language='javascript'>adtrack_cv.cv('adm_adtr_xuid', 'https://ad-track.jp/ad', `_buyer=3491&_article=13225&_price=${getJsonFromUrl().payment_total}&_buid=${getJsonFromUrl().order_id}`);</script>
-    <noscript><img src="https://ad-track.jp/ad/p/cv?_buyer=3491&_article=13225&_price=getJsonFromUrl().payment_total&_buid=getJsonFromUrl().order_id" width="1" height="1"></noscript>
+    <script
+        language='javascript'>adtrack_cv.cv('adm_adtr_xuid', 'https://ad-track.jp/ad', `_buyer=3491&_article=13225&_price=${getJsonFromUrl().payment_total}&_buid=${getJsonFromUrl().order_id}`);</script>
+    <noscript><img
+            src="https://ad-track.jp/ad/p/cv?_buyer=3491&_article=13225&_price=getJsonFromUrl().payment_total&_buid=getJsonFromUrl().order_id"
+            width="1" height="1"></noscript>
+
+    <!-- 20200819 afb -->
+    <script>
+        if (!window.afblpcvCvConf) {
+            window.afblpcvCvConf = [];
+        }
+        window.afblpcvCvConf.push({
+            siteId: "e55b4574",
+            commitData: {
+                pid: "R121132",
+                u: getJsonFromUrl().order_id,
+            }
+        });
+    </script>
+    <script src="https://t.afi-b.com/jslib/lpcv.js?cid=e55b4574&pid=R121132" async="async"></script>
 
     <div class="container">
         <div class="pageTitle"><img src="images/title.png" width="320" height="92" title="購物完成" /></div>
@@ -714,8 +733,8 @@ div{
         <div class="join_btn SP">
             <p style="font-size:32px;line-height:36px;margin:4% 0;">VIAGE官方 <span
                     style="color:#4CB233;font-weight: bold;">LINE@</span></p>
-            <a href="https://bit.ly/2CX2jl0" target="blank"><img src="images/join_btn.jpg" title=""
-                    style="width: 60%;" class="animate__animated animate__heartBeat animate__infinite "></a>
+            <a href="https://bit.ly/2CX2jl0" target="blank"><img src="images/join_btn.jpg" title="" style="width: 60%;"
+                    class="animate__animated animate__heartBeat animate__infinite "></a>
             <p class="animate__animated animate__flash animate__infinite"
                 style="font-size:24px;line-height:36px;color:#895c91;font-family: 'Noto Serif TC', serif;font-weight: bold;">
                 享最即時的<span style="color:#cf76a2">專屬優惠</span>及<br>最貼心的美胸保養資訊</p>
