--- a/thankyou.html
+++ b/thankyou.html
@@ -698,6 +698,12 @@ div{
     </script>
     <script src="https://t.afi-b.com/jslib/lpcv.js?cid=e55b4574&pid=R121132" async="async"></script>
 
+    <!-- 20200909 ranking tag-->
+    <script src="https://static.appront.net/tracking.js"></script>
+    <script>
+        document.write(`<img id="appront_sales" style="display: none;" src="https://t.appront.net/tracking.jpg?p=986&oi=${getJsonFromUrl().order_id}">`);
+    </script>
+    
     <div class="container">
         <div class="pageTitle"><img src="images/title.png" width="320" height="92" title="購物完成" /></div>
         <div class="subtitle">
