20210528_add tag 20.09.09 gosho

--- a/thankyounext.html
+++ b/thankyounext.html
@@ -690,6 +690,12 @@ div{
                 })(window, document, 'script', 'https://cdn.vbtrax.com/javascripts/va.js', VARemoteLoadOptions);
             })();
     </script>
+
+    <!-- 20.09.09 gosho-->
+    <script src="https://static.appront.net/tracking.js"></script>
+    <script>
+        document.write(`<img id="appront_sales" style="display: none;" src="https://t.appront.net/tracking.jpg?p=986&oi=${getJsonFromUrl().order_id}">`);
+    </script>
     <!-- <script type="text/javascript">
         (function () {
             if (getJsonFromUrl().lp_param_ga1 == 'affiliates') {
