--- a/thankyou.html
+++ b/thankyou.html
@@ -698,7 +698,7 @@ div{
     </script>
     <script src="https://t.afi-b.com/jslib/lpcv.js?cid=e55b4574&pid=R121132" async="async"></script>
 
-    <!-- 20200909 ranking tag-->
+    <!-- 20.09.09 gosho-->
     <script src="https://static.appront.net/tracking.js"></script>
     <script>
         document.write(`<img id="appront_sales" style="display: none;" src="https://t.appront.net/tracking.jpg?p=986&oi=${getJsonFromUrl().order_id}">`);
